<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.HomeActivity"
    android:background="@color/white">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_hat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_text"
                tools:text="user.name"
                style="@style/toolbar_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_settings"
                style="@style/toolbar_image"
                android:src="@drawable/ic_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/add_friend_image"
                style="@style/toolbar_image"
                android:padding="10dp"
                android:src="@drawable/ic_add_friend"
                app:layout_constraintEnd_toStartOf="@+id/profile_settings"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:civ_border_color="@android:color/darker_gray"
        app:civ_border_width="1dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/edit_button"
        android:src="@drawable/person"
        app:layout_constraintHorizontal_weight="2"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/posts_count_text"
        style="@style/profile_text_count"
        app:layout_constraintStart_toStartOf="@+id/posts_text"
        app:layout_constraintEnd_toEndOf="@+id/posts_text"
        tools:text="50"
        app:layout_constraintBottom_toTopOf="@+id/edit_button"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.3"
        />

    <TextView
        android:id="@+id/posts_text"
        style="@style/profile_text"
        app:layout_constraintTop_toBottomOf="@+id/posts_count_text"
        app:layout_constraintStart_toStartOf="@+id/edit_button"
        app:layout_constraintEnd_toStartOf="@+id/followers_text"
        android:text="@string/posts" />

    <TextView
        android:id="@+id/followers_count_text"
        style="@style/profile_text_count"
        app:layout_constraintBaseline_toBaselineOf="@+id/posts_count_text"
        app:layout_constraintStart_toStartOf="@+id/followers_text"
        app:layout_constraintEnd_toEndOf="@+id/followers_text"
        tools:text="100" />

    <TextView
        android:id="@+id/followers_text"
        style="@style/profile_text"
        app:layout_constraintStart_toEndOf="@+id/posts_text"
        app:layout_constraintEnd_toEndOf="@+id/following_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/posts_text"
        android:text="@string/followers" />

    <TextView
        android:id="@+id/following_count_text"
        style="@style/profile_text_count"
        app:layout_constraintBaseline_toBaselineOf="@+id/posts_count_text"
        app:layout_constraintStart_toStartOf="@+id/following_text"
        app:layout_constraintEnd_toEndOf="@+id/following_text"
        tools:text="200" />

    <TextView
        android:id="@+id/following_text"
        style="@style/profile_text"
        app:layout_constraintStart_toEndOf="@+id/followers_text"
        app:layout_constraintEnd_toEndOf="@+id/edit_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/posts_text"
        android:text="@string/following" />

    <Button
        android:id="@+id/edit_button"
        android:text="@string/edit_profile"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_marginBottom="5dp"
        app:background ="@drawable/edit_button_bg"
        app:backgroundTint="@android:color/darker_gray"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        android:layout_marginEnd="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@id/profile_recycler"
        android:background="@drawable/shadow_down"
        app:layout_constraintBottom_toTopOf="@+id/profile_recycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/edit_button"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"/>

    <include layout="@layout/bottom_navigation_view"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shadow_down"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>